--- a/semiProject/src/main/resources/static/css/mypage/changePw.css
+++ b/semiProject/src/main/resources/static/css/mypage/changePw.css
@@ -1,8 +1,8 @@
 body {
     display: flex;
     flex-direction: column;
-    min-height: 100vh; /* 화면 전체 높이를 최소한 확보 */
-    margin: 0; /* 기본 마진 제거 */
+    min-height: 100vh;
+    margin: 0;
 }
 
 .mypage-main {
@@ -13,7 +13,6 @@ body {
     gap: 40px; 
 }
 
-/* 본문 영역이 남은 공간 꽉 채우게 */
 .mypage-content {
     flex-grow: 1; 
     width: 100%; 
@@ -21,7 +20,6 @@ body {
     padding: 0;
 }
 
-/* 제목 스타일 */
 .mypage-title {
     font-size: 32px;
     font-weight: bold;
@@ -31,7 +29,6 @@ body {
     margin-bottom: 40px;
 }
 
-/* 입력 한 줄 박스 */
 .myPage-row {
   display: flex;
   flex-direction: column;
