--- a/semiProject/src/main/resources/static/css/mypage/profile.css
+++ b/semiProject/src/main/resources/static/css/mypage/profile.css
@@ -1,5 +1,3 @@
-@charset "UTF-8";
-
 /* 전체 레이아웃 잡기 */
 .mypage-container {
     display: flex;
@@ -78,7 +76,7 @@ h2 {
 
 .form-group label {
     display: block;
-    font-weight: 700; /* 라벨 좀 더 진하게 */
+    font-weight: 700;
     margin-bottom: 10px;
     color: #333;
     font-size: 15px;
@@ -97,8 +95,8 @@ h2 {
 
 .form-group input:focus {
     outline: none;
-    border-color: #4CAF50; /* 포커스 색상 */
-    border-width: 2px; /* 포커스 시 테두리 두껍게 */
+    border-color: #4CAF50; 
+    border-width: 2px; 
 }
 
 /* 읽기 전용 인풋 */
@@ -137,7 +135,7 @@ h2 {
 
 /* 주소 검색 버튼 */
 .btn-dark {
-    width: 120px; /* 버튼 너비 키움 */
+    width: 120px; 
     height: 50px;
     background-color: #333;
     color: #fff;
@@ -166,7 +164,7 @@ h2 {
 .btn-submit {
     width: 250px; 
     height: 55px;
-    background-color: #ffcd39; 
+    background-color: #ffd54f; 
     color: #333; 
     border: none;
     border-radius: 5px;
