--- a/semiProject/src/main/resources/static/css/common/footer.css
+++ b/semiProject/src/main/resources/static/css/common/footer.css
@@ -4,7 +4,7 @@ body {
 }
 
 #footer {
-  background-color: #697077;
+  background-color: #fdf0dd;
   padding: 30px 20px;
   display: flex;
   flex-direction: column;
