--- a/semiProject/src/main/resources/static/css/common/policy.css
+++ b/semiProject/src/main/resources/static/css/common/policy.css
@@ -8,7 +8,6 @@ body {
   flex-direction: column;
   min-height: 100vh;
 }
-/* 기본 스타일 */
 .policy-container {
   flex: 1;
   max-width: 800px;
@@ -18,6 +17,7 @@ body {
   line-height: 1.8;
   color: #333;
   width: 100%;
+  margin-bottom: 150px;
 }
 
 .policy-container h1 {
