--- a/semiProject/src/main/resources/templates/mypage/comments.html
+++ b/semiProject/src/main/resources/templates/mypage/comments.html
@@ -75,23 +75,23 @@
 
             <div class="pagination-area" th:if="${!#lists.isEmpty(map.boardList)}">
                 <ul class="pagination">
-                    <li><a th:href="@{/mypage/posts(cp=1)}">&lt;&lt;</a></li>
+                    <li><a th:href="@{/mypage/comments(cp=1)}">&lt;&lt;</a></li>
                     
-                    <li><a th:href="@{/mypage/posts(cp=${map.pagination.prevPage})}">&lt;</a></li>
+                    <li><a th:href="@{/mypage/comments(cp=${map.pagination.prevPage})}">&lt;</a></li>
                     
                     <li th:each="i : ${#numbers.sequence(map.pagination.startPage, map.pagination.endPage)}">
-                        <a th:href="@{/mypage/posts(cp=${i})}" 
+                        <a th:href="@{/mypage/comments(cp=${i})}" 
                            th:text="${i}"
                            th:classappend="${i == map.pagination.currentPage} ? 'current' : ''">1</a>
                     </li>
                     
-                    <li><a th:href="@{/mypage/posts(cp=${map.pagination.nextPage})}">&gt;</a></li>
+                    <li><a th:href="@{/mypage/comments(cp=${map.pagination.nextPage})}">&gt;</a></li>
                     
-                    <li><a th:href="@{/mypage/posts(cp=${map.pagination.maxPage})}">&gt;&gt;</a></li>
+                    <li><a th:href="@{/mypage/comments(cp=${map.pagination.maxPage})}">&gt;&gt;</a></li>
                 </ul>
             </div>
             
-            <form action="posts" method="get" class="search-area">
+            <form action="comments" method="get" class="search-area">
 								<select name="key">
 									<option value="title">제목</option>
 									<option value="content">내용</option>
