--- a/semiProject/src/main/resources/templates/mypage/scraps.html
+++ b/semiProject/src/main/resources/templates/mypage/scraps.html
@@ -29,7 +29,7 @@
                             <th>게시판 유형</th>
                             <th>제목</th>
                             <th>닉네임</th>
-                            <th>작성일(시작일)</th>
+                            <th>작성일</th>
                             <th>조회수</th>
                             <th>좋아요</th>
                         </tr>
