[Update] 메인 페이지 구현 완료 및 봉사후기 조회수 텍스트 추가

--- a/semiProject/src/main/resources/templates/board/boardList.html
+++ b/semiProject/src/main/resources/templates/board/boardList.html
@@ -63,7 +63,9 @@
                    id="content-title" th:text="*{boardTitle}">제목</a>
                 <div>
                   <p id="day-info-text" th:text="*{boardWriteDate}">작성일</p>
-                  <p id="view-info-text" th:text="*{readCount}">조회수</p>
+                  <div id="read-count-info">
+                  <span>조회수</span><p id="view-info-text" th:text="*{readCount}">조회수</p>
+                </div>
                 </div>
               </div>
             </div>
