--- a/semiProject/src/main/resources/static/css/common/main.css
+++ b/semiProject/src/main/resources/static/css/common/main.css
@@ -37,6 +37,7 @@ body {
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
   width: 100%;
+  padding-bottom: 70px;
 }
 
 .board-section {
@@ -66,7 +67,7 @@ body {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 200px;
+  max-width: 400px;
 }
 .board-list a:hover {
   text-decoration: underline;
@@ -78,7 +79,12 @@ body {
   padding: 8px 0;
   font-size: 15px;
 }
-
+.board-list-content-2 .read-count-text {
+  justify-content: flex-end;
+}
+.rank-text {
+  text-align: center;
+}
 .volunteer-king-section {
   background: #fff;
   border-radius: 20px;
@@ -86,6 +92,7 @@ body {
   border: 2px solid #fab005;
   position: relative;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
+  margin-bottom: 50px;
 }
 
 .king-badge {
@@ -118,9 +125,12 @@ body {
 #volunteer-title-text {
   font-size: 28px;
   font-weight: bold;
-  margin-bottom: 30px;
 }
-
+#volunteer-story-title-text {
+  margin-bottom: 30px;
+  font-size: 28px;
+  font-weight: bold;
+}
 swiper-slide {
   border-radius: 20px;
   background: #fff;
@@ -160,11 +170,16 @@ swiper-slide {
 .text {
   color: gray;
 }
+.read-count {
+  justify-content: flex-end;
+}
 .rank {
+  display: block;
+  text-align: center;
   font-weight: bold;
   color: #ff8787;
-  margin-right: 10px;
   width: 20px;
+  margin-left: 4px;
 }
 /* 정보게시판 */
 .info-board-grid {
@@ -183,6 +198,7 @@ swiper-slide {
   background-color: white;
   border-radius: 20px;
   padding: 20px;
+  transition: all 0.3s ease;
 }
 .info-board-detail-btn {
   display: flex;
@@ -191,11 +207,25 @@ swiper-slide {
 .volun-type-text {
   color: #ff5900;
   font-weight: bold;
+  transition: color 0.3s ease;
+}
+.info-board-detail:hover .volun-type-text {
+  color: #fff2d4;
+}
+.read-count-text {
+  justify-content: flex-end;
+}
+.read-count-text {
+  text-align: end;
 }
 .volun-info-title-text {
   font-weight: bold;
   font-size: 20px;
 }
 .info-board-section {
-  padding-bottom: 30px;
+  padding-bottom: 40px;
+}
+.info-board-detail:hover {
+  background-color: #ff5900;
+  color: white;
 }
