--- a/semiProject/src/main/resources/static/css/mypage/posts.css
+++ b/semiProject/src/main/resources/static/css/mypage/posts.css
@@ -17,8 +17,10 @@ body {
 
 
 .main-content {
-    flex-grow: 1;          
-    width: 100%;         
+    flex: 1;
+    padding: 50px;
+    background-color: #fff;
+    border-radius: 10px;
 }
 
 /* 제목 스타일 */
