[Update] 마이페이지 UI  조정

--- a/semiProject/src/main/resources/static/css/mypage/posts.css
+++ b/semiProject/src/main/resources/static/css/mypage/posts.css
@@ -17,10 +17,8 @@ body {
 
 
 .main-content {
-    flex: 1;
-    padding: 50px;
-    background-color: #fff;
-    border-radius: 10px;
+    flex-grow: 1;            
+    width: 100%;             
 }
 
 /* 제목 스타일 */
